### 10.291.1
FONCTIONNALITES
- Système compatible avec Foundry v10
- Nouvelle option du système pour désactiver le son de certaines actions et changement de l'ordre des options
- Statistique anonyme de la création d'un monde

CORRECTIFS
- Dépenser 1 Point de Récupération rend TOUS les points de vie

### Version 9.269.4
FONCTIONNALITES
- Ajout du clic gauche pour ouvrir directement un trait ou un profil depuis la fiche de personnage

### Version 9.269.3
CORRECTIFS
- Correction de l'affichage de la difficulté dans le chat des joueurs

FONCTIONNALITES
- Ajout du maximum à deux fois l'Init avec l'option Initiative aléatoire

### Version 9.269.2
FONCTIONNALITES
- Ajout de l'option initiative variable
- Ajout de l'option Setting Cyberpunk
- Prise en compte du setting Cyberpunk pour les points de Cash

### Version 9.269.1
CORRECTIFS
- Bonus sur les attaques qui apparait deux fois dans la fenêtre de dialogue

FONCTIONNALITES
- Mise à jour des clé de traduction
- Prise en compte de la difficulté selon la cible et l'option

### Version 9.238.2
CORRECTIFS
- Ouverture des compendiums

### Version 9.238.1
CORRECTIFS
- Drag n drop des macros
- Affichage des tabs

### Version 0.8.9.6
CORRECTIFS
- Affichage du nombre de mains dans l'onglet Combat
- La désélection des propriétés d'un objet entraine la désélection des propriétés liées
- Corrige checkbox DR cachée si option non activée

### Version 0.8.9.5
FONCTIONNALITES
- Dé explosif des DM désactivable par une option
- Ajout d'une option "Vérification des mains libres" : vérifie qu'il reste assez de mains pour équiper l'objet
		Ne pas vérifier
		Vérifié : ignorable par tout le monde en utilisant SHIFT
		Vérifié : ignorable uniquement par le MJ en utilisant SHIFT

- Ajout d'une option "Vérification des emplacements d'armure" : vérifie que le slot n'est pas déjà pris par une armure équipée
		Ne pas vérifier
		Vérifié : ignorable par tout le monde en utilisant SHIFT
		Vérifié : ignorable uniquement par le MJ en utilisant SHIFT