@@ -1,10 +1,8 @@
 export default class CocCombat extends Combat {
-
-    constructor(data, context) {
-        console.log('CocCombat Constructor');
-        super(data, context);
-    }
-/**
+  constructor(data, context) {
+    super(data, context);
+  }
+  /**
    * Roll initiative for one or multiple Combatants within the Combat document
    * @param {string|string[]} ids     A Combatant id or Array of ids for which to roll
    * @param {object} [options={}]     Additional options which modify how initiative rolls are created or presented.
@@ -13,8 +11,7 @@ export default class CocCombat extends Combat {
    * @param {object} [options.messageOptions={}]    Additional options with which to customize created Chat Messages
    * @return {Promise<Combat>}        A promise which resolves to the updated Combat document once updates are complete.
    */
- async rollInitiative(ids, {formula=null, updateTurn=true, messageOptions={}}={}) {
-
+  async rollInitiative(ids, { formula = null, updateTurn = true, messageOptions = {} } = {}) {
     // Structure input data
     ids = typeof ids === "string" ? [ids] : ids;
     const currentId = this.combatant?.id;
@@ -23,60 +20,58 @@ export default class CocCombat extends Combat {
     // Iterate over Combatants, performing an initiative roll for each
     const updates = [];
     const messages = [];
-    for ( let [i, id] of ids.entries() ) {
-
+    for (let [i, id] of ids.entries()) {
       // Get Combatant data (non-strictly)
       const combatant = this.combatants.get(id);
-      if ( !combatant?.isOwner ) continue;
+      if (!combatant?.isOwner) continue;
 
       // Produce an initiative roll for the Combatant
       const roll = combatant.getInitiativeRoll(formula);
-      await roll.evaluate({async: true});
+      await roll.evaluate({ async: true });
 
       // Maximum of Initiative = 2 * Base initiative
       if (game.settings.get("coc", "useVarInit")) {
         if (Math.trunc(roll.total) > 2 * roll.data.attributes.init.value) {
-            const decimalPart = roll.total - Math.trunc(roll.total);
-            const init = 2 * roll.data.attributes.init.value + decimalPart;
-            updates.push({_id: id, initiative: init});
-        }
-        else updates.push({_id: id, initiative: roll.total});
-      }
-      else updates.push({_id: id, initiative: roll.total});
+          const decimalPart = roll.total - Math.trunc(roll.total);
+          const init = 2 * roll.data.attributes.init.value + decimalPart;
+          updates.push({ _id: id, initiative: init });
+        } else updates.push({ _id: id, initiative: roll.total });
+      } else updates.push({ _id: id, initiative: roll.total });
 
       // Construct chat message data
-      let messageData = foundry.utils.mergeObject({
-        speaker: ChatMessage.getSpeaker({
-          actor: combatant.actor,
-          token: combatant.token,
-          alias: combatant.name
-        }),
-        flavor: game.i18n.format("COMBAT.RollsInitiative", {name: combatant.name}),
-        flags: {"core.initiativeRoll": true},
-      }, messageOptions);
-      const chatData = await roll.toMessage(messageData, {create: false});
+      let messageData = foundry.utils.mergeObject(
+        {
+          speaker: ChatMessage.getSpeaker({
+            actor: combatant.actor,
+            token: combatant.token,
+            alias: combatant.name,
+          }),
+          flavor: game.i18n.format("COMBAT.RollsInitiative", { name: combatant.name }),
+          flags: { "core.initiativeRoll": true },
+        },
+        messageOptions
+      );
+      const chatData = await roll.toMessage(messageData, { create: false });
 
       // If the combatant is hidden, use a private roll unless an alternative rollMode was explicitly requested
-      chatData.rollMode = "rollMode" in messageOptions ? messageOptions.rollMode :
-        (combatant.hidden ? CONST.DICE_ROLL_MODES.PRIVATE : chatRollMode );
+      chatData.rollMode = "rollMode" in messageOptions ? messageOptions.rollMode : combatant.hidden ? CONST.DICE_ROLL_MODES.PRIVATE : chatRollMode;
 
       // Play 1 sound for the whole rolled set
-      if ( i > 0 ) chatData.sound = null;
+      if (i > 0) chatData.sound = null;
       messages.push(chatData);
     }
-    if ( !updates.length ) return this;
+    if (!updates.length) return this;
 
     // Update multiple combatants
     await this.updateEmbeddedDocuments("Combatant", updates);
 
     // Ensure the turn order remains with the same combatant
-    if ( updateTurn && currentId ) {
-      await this.update({turn: this.turns.findIndex(t => t.id === currentId)});
+    if (updateTurn && currentId) {
+      await this.update({ turn: this.turns.findIndex((t) => t.id === currentId) });
     }
 
     // Create multiple chat messages
     await ChatMessage.implementation.create(messages);
     return this;
   }
-
 }
