@@ -1,4 +1,3 @@
-{{log 'item-card' this}}
 <h1>{{itemName}}</h1>
 {{{description}}}
 {{#if limited      }} <span class="tag"> {{localize "COC.ui.limited"}} | </span> {{/if}}
