@@ -3,6 +3,8 @@ FONCTIONNALITES
 - Système compatible avec Foundry v10
 - Nouvelle option du système pour désactiver le son de certaines actions et changement de l'ordre des options
 - Statistique anonyme de la création d'un monde
+- Ajout d'une action sur les onglets inventaire et capacités pour envoyer des informations sur l'objet dans la fenêtre de chat
+- Ajout des infots de l'onglet combat dans l'onglet inventaire
 
 CORRECTIFS
 - Dépenser 1 Point de Récupération rend TOUS les points de vie
